# nanoLOOP

./: .gitignore  CLAUDE.md  README.md  bench.py  configurator.py  model.py  pyproject.toml  sample.py  train.py  transformer_sizing.ipynb
config/: train_shakespeare_char_looped.py  train_tasks.py
data/shakespeare_char/: prepare.py
tasks/: __init__.py  arithmetic.py  graph.py  grid.py  maze.py  sat.py
tests/: conftest.py  test_model.py  test_tasks.py
